[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/StatOverviewPanel/Subs/GameEndStatsPanel/Subs/TowerIconsPanel/TowerIconsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/StatOverviewPanel/Subs/GameEndStatsPanel/Subs/SynergyIconsPanel/SynergyIconsPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/StatOverviewPanel/Subs/GameEndStatsPanel/Subs/TotalDamagePanel/TotalDamagePanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/StatOverviewPanel/Subs/GameEndStatsPanel/GameEndStatsPanel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[node name="GameEndStatsPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 312.0
margin_bottom = 168.0

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
margin_right = 312.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "You ended the game with:"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 312.0
margin_bottom = 168.0
custom_constants/separation = 8

[node name="Towers" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 312.0
margin_bottom = 35.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/Towers"]
margin_right = 312.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "These towers:"

[node name="TowerIconsPanel" parent="VBoxContainer/VBoxContainer/Towers" instance=ExtResource( 2 )]
margin_top = 23.0
margin_right = 312.0
margin_bottom = 35.0

[node name="Synergies" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 312.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/Synergies"]
margin_right = 312.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Using these synergies:"

[node name="SynergyIconsPanel" parent="VBoxContainer/VBoxContainer/Synergies" instance=ExtResource( 3 )]
margin_top = 23.0
margin_right = 312.0
margin_bottom = 35.0

[node name="Damage" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 312.0
margin_bottom = 139.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/Damage"]
margin_right = 312.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "And dealing this much damage:"

[node name="TotalDamagePanel" parent="VBoxContainer/VBoxContainer/Damage" instance=ExtResource( 4 )]
margin_top = 23.0
margin_right = 312.0
margin_bottom = 53.0
